Fix Powermocks on JDK-17